# fastapi-sqlite-redis

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  helmfile.yaml  pyproject.toml
app/: database.py  main.py  redis_client.py
environments/dev/: values.yaml
environments/prod/: values.yaml
environments/staging/: values.yaml
helm/fastapi-app/: .helmignore  Chart.yaml  values.yaml
helm/fastapi-app/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  redis-service.yaml  redis-statefulset.yaml  serviceaccount.yaml
helm/fastapi-app/templates/tests/: test-connection.yaml
