[project]
name = "fastapi-sqlite-redis-lab"
version = "0.1.0"
description = "FastAPI + SQLite + Redis demo app for Docker networking experiments"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
